# K-LEAN

./: .gitignore  AGENTS.md  AGENT_SDK_IMPLEMENTATION_PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMANDS_REFERENCE.md  COMPREHENSIVE_VERIFICATION_REPORT.md  CONTRIBUTING.md  CRYPTOLIB_IMPLEMENTATION_DROID.md  DEVELOPMENT.md  IMPLEMENTATION_PROGRESS.md  ISSUE_FIX_PLAN.md  KLEAN_PERFORMANCE_TEST_REPORT.md  KLEAN_TEST_SUMMARY.txt  KNOWLEDGE_SYSTEM.md  LICENSE  Manual_Testing_FULL_SYSTEM.md  PERFORMANCE_ANALYZER_IMPLEMENTATION.md  PHASE_4B_COMPLETION_REPORT.md  PHASE_6_CRYPTOLIB_SUMMARY.md  PROJECT_INDEX.json  PROJECT_INDEX.md  QA_MANUAL_INSTALL_TEST.md  QA_REPORT.md  README.md  REVIEW_SYSTEM_DETAILED.md  SECURITY.md  TEST_RESULTS.md  TOON_IMPLEMENTATION_COMPLETE.md  TOON_IMPLEMENTATION_ROADMAP.md  TOON_QUICK_SUMMARY.md  TOON_VS_JSON_ANALYSIS.md  pyproject.toml  stress_test_direct.py  stress_test_results.json  stress_test_results_direct.json  test_klean_performance.py  test_performance_analyzer.py  test_performance_analyzer_unit.py
.agents/: COMPONENTS.md  DEVELOPMENT.md  (+14 more)
review-system-backup/: .gitignore  CLAUDE.md  COMMANDS_REFERENCE.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCS.md  KLEAN-V3-CHECKSUMS.txt  KLEAN-V3-INVENTORY.txt  LICENSE  MANIFEST.in  README.md  REVIEW-PLAN.md  REVIEW_SYSTEM_STRUCTURE.md  REVIEW_SYSTEM_USAGE.md  audit-settings.json  bash_functions.sh  install.sh  pyproject.toml  settings.json  test.sh  update.sh
review-system-backup/.github/: PULL_REQUEST_TEMPLATE.md
review-system-backup/.github/workflows/: ci.yml
review-system-backup/NEXT_FEATURES/: SEMANTIC_MEMORY_SYSTEM.md
review-system-backup/commands/: asyncConsensus.md  asyncDeepReview.md  asyncReview.md  asyncReviewDoc.md  asyncSecondOpinion.md  backgroundReviewDoc.md  consensus.md  createReviewDoc.md  deepReview.md  parallelDeepReview.md  review.md  secondOpinion.md
review-system-backup/commands-kln/: asyncConsensus.md  asyncDeepAudit.md  asyncDeepReview.md  asyncQuickCompare.md  asyncReview.md  asyncReviewDoc.md  asyncSecondOpinion.md  backgroundReport.md  backgroundReviewDoc.md  consensus.md  createReport.md  createReviewDoc.md  deepAudit.md  deepInspect.md  deepReview.md  droidAudit.md  help.md  parallelDeepReview.md  quickCompare.md  quickConsult.md  quickReview.md  remember.md  review.md  secondOpinion.md
review-system-backup/commands-kln-v3/: deep.md  doc.md  droid.md  help.md  multi.md  quick.md  remember.md  rethink.md  status.md
review-system-backup/commands/kln/: asyncDroidAudit.md  deep.md  deepInspect.md  doc.md  droid.md  help.md  multi.md  quick.md  quickCompare.md  quickReview.md  remember.md  rethink.md
review-system-backup/commands/kln-v2-backup/: asyncDroid.md  asyncQuickConsult.md  asyncQuickReview.md  droid.md  droidExecute.md  help.md  models.md  quickCompare.md
review-system-backup/config/: CLAUDE.md  nanogpt.yaml  review-settings.json  settings-nanogpt.json  settings.json
review-system-backup/config/litellm/: .env.example  config.yaml
review-system-backup/docs/: ARCHITECTURE-ANALYSIS.md  ARCHITECTURE.md  COMMANDS.md  DEVELOPER.md  DROID-SYSTEM.md  DROID-TEMPLATE-GUIDE.md  HOOKS.md  IMPLEMENTATION-AUTO-DETECTION.md  IMPLEMENTATION-PLAN.md  IMPROVEMENT-GUIDE.md  INSTALLATION.md  KLEAN_CLI_IMPLEMENTATION_REPORT.md  KNOWLEDGE-SYSTEM.md  LESSONS-LEARNED.md  PATH-MANAGEMENT-PLAN.md  PHASE4_VALIDATION_REPORT.md  QUICK_START_PERFORMANCE_ANALYZER.md  README.md  RESTRUCTURE-PLAN.md  REVIEW-SYSTEM.md  SYSTEM_SUMMARY.md  TOON-ADAPTER.md  TOON_EXECUTIVE_SUMMARY.md  TOON_INDEX.md  agent_droids_comparison.md  performance_analyzer_droid.md
review-system-backup/docs/dev/: lessons-learned.md  open-source-plan.md
review-system-backup/docs/guides/: knowledge-db.md
review-system-backup/docs/reference/: cli.md  commands.md  docs-index.md
review-system-backup/droids/: arm-cortex-expert.md  c-pro.md  code-reviewer.md  performance-engineer.md  rust-expert.md
review-system-backup/hooks/: async-review.sh  context-monitor.sh  post-bash-handler.sh  post-edit-quality.sh  post-web-handler.sh  session-start.sh  user-prompt-handler.sh
review-system-backup/lib/: common.sh
review-system-backup/roadmap/semantic-memory/: ORIGINAL_README.md
review-system-backup/roadmap/toon/: README.md
review-system-backup/scripts/: async-dispatch.sh  auto-capture-hook.sh  bashrc-additions.sh  consensus-review.sh  deep-review.sh  droid-execute.sh  droid-review.sh  fact-extract.sh  get-models.sh  goodjob-dispatch.sh  health-check-model.sh  health-check.sh  kb-doctor.sh  kb-init.sh  kb-root.sh  klean-statusline.py  knowledge-capture.py  knowledge-context-injector.py  knowledge-fast.sh  knowledge-hybrid-search.py  knowledge-migrate-schema.py  knowledge-query.sh  knowledge-search.py  knowledge-server.py  knowledge_db.py  litellm-review.sh  litellm-start.sh  parallel-deep-review.sh  parallel-droid-review.sh  post-commit-docs.sh  prepare-release.sh  quick-review.sh  second-opinion.sh  session-helper.sh  setup-litellm.sh  smart-capture.py  smart-web-capture.sh  start-litellm.sh  sync-check.sh  test-deep-audit.sh  (+5 more)
review-system-backup/skills/: embedded-review.md
review-system-backup/src/klean/: __init__.py  cli.py
review-system-backup/src/klean-v3/: config.yaml  klean_core.py
(+273 files in other folders)
